# ai-chat-assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.api  Dockerfile.web  README.md  biome.json  compose.yaml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/api/: README.md  package.json  pyproject.toml
apps/api/src/: __init__.py  main.py
apps/api/src/graph/: __init__.py  fsm.py
apps/api/src/metrics/: store.py
apps/api/src/middleware/: metrics.py
apps/api/src/models/: __init__.py  analysis.py  fixit.py
apps/api/src/routes/: __init__.py  analysis.py  chat.py  metrics.py  tools.py
apps/api/src/services/: analysis.py  fixit.py
apps/api/tests/: test_analysis.py  test_chat_stream.py  test_fixit.py  test_health.py  test_tools_generate.py
apps/web/: next.config.mjs  package.json  tsconfig.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/components/chat/: message-list.tsx  slo-meter.test.tsx  slo-meter.tsx  token-meter.tsx
apps/web/app/components/evidence/: evidence-panel.module.css  evidence-panel.test.tsx  evidence-panel.tsx  index.ts
apps/web/app/components/tools/: fixit-panel.test.tsx  fixit-panel.tsx  tool-log-list.tsx
apps/web/app/hooks/: use-chat-stream.ts  use-tool-stream.ts
apps/web/app/lib/: sse.test.ts  sse.ts
